@@ -22,9 +22,6 @@
  */
 
 // key: compiler.err.first.statement.must.be.call.to.another.constructor
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
-// options: --enable-preview -source ${jdk.version}
 
 record R(int x) {
     public R(int x, int y) { this.x = x; }
