@@ -22,8 +22,5 @@
  */
 
 // key: compiler.err.record.cant.declare.field.modifiers
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
-// options: --enable-preview -source ${jdk.version}
 
 record R(final int x) {}
